--- a/kubernetes/api-deployment.yaml
+++ b/kubernetes/api-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ap-service
+  name: api-service
 spec:
   selector:
     app: api
@@ -18,7 +18,7 @@ metadata:
   labels:
     app: api
 spec:
-  replicas: 5
+  replicas: 10
   selector:
     matchLabels:
       app: api
