SC: changed image version to latst to always work with latest

--- a/kubernetes/api-deployment.yaml
+++ b/kubernetes/api-deployment.yaml
@@ -33,6 +33,6 @@ spec:
     spec:
       containers:
       - name: api
-        image: snehac174/api:1
+        image: snehac174/api:latest
         ports:
         - containerPort: 4000
