SC: corrected image version to exact image name

--- a/kubernetes/api-deployment.yaml
+++ b/kubernetes/api-deployment.yaml
@@ -33,6 +33,6 @@ spec:
     spec:
       containers:
       - name: api
-        image: snehac174/api:latest
+        image: snehac174/api:1
         ports:
         - containerPort: 5000
