SC: Sp3 Prj changes to push to GCR io and use that image

--- a/kubernetes/api-deployment.yaml
+++ b/kubernetes/api-deployment.yaml
@@ -33,6 +33,6 @@ spec:
     spec:
       containers:
       - name: api
-        image: snehac174/api:1
+        image: gcr.io/lbg_210222/api-sneha:latest
         ports:
         - containerPort: 5000
